--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-python-dotenv==1.0.0
+python-dotenv~=1.0.1
+
+mysql-connector-python~=9.0.0
+requests~=2.25.1
+beautifulsoup4~=4.12.3
+selenium~=4.19.0
+webdriver-manager~=4.0.1
