--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-python-dotenv~=1.0.1
-mysql-connector-python~=9.0.0
-requests~=2.31.0
-beautifulsoup4~=4.12.3
-selenium~=4.19.0
-webdriver-manager~=4.0.1
-spotipy~=2.23.0
-google-api-python-client~=2.125.0
+mysql_connector_repackaged==0.3.1
+python-dotenv==1.0.1
+Requests==2.32.3
+selenium==4.29.0
