--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,155 @@
-mysql_connector_repackaged==0.3.1
+apturl==0.5.2
+argcomplete==1.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+Brlapi==0.8.3
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.17.1
+chardet==4.0.0
+charset-normalizer==2.0.6
+chromedriver-autoinstaller==0.6.4
+click==8.1.7
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+defusedxml==0.7.1
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==0.8.21
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+fasteners==0.14.1
+Flask==3.0.3
+future==0.18.2
+git-filter-repo==2.45.0
+google-api-core==2.18.0
+google-api-python-client==2.125.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
+greenlet==3.1.1
+gspread==6.1.0
+gyp==0.1
+h11==0.14.0
+httpie==2.6.0
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+instaloader==4.11
+itsdangerous==2.2.0
+jeepney==0.7.1
+Jinja2==3.1.4
+jsonschema==3.2.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==5.2.1
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.1.5
+monotonic==1.6
+more-itertools==8.10.0
+MouseInfo==0.1.3
+mysql-connector-python==9.0.0
+netifaces==0.11.0
+numpy==1.26.4
+oauth2client==4.1.3
+oauthlib==3.2.0
+olefile==0.46
+opencv-python==4.10.0.84
+openpyxl==3.1.5
+outcome==1.3.0.post0
+packaging==24.0
+pandas==2.2.2
+paramiko==2.9.3
+pexpect==4.8.0
+pillow==10.4.0
+proto-plus==1.23.0
+protobuf==4.25.3
+ptyprocess==0.7.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+PyAutoGUI==0.9.54
+pycairo==1.20.1
+pycparser==2.22
+pycups==2.0.1
+PyGetWindow==0.0.9
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyMsgBox==1.0.9
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyperclip==1.9.0
+PyRect==0.2.0
+pyRFC3339==1.1
+pyrsistent==0.18.1
+PyScreeze==1.0.1
+PySocks==1.7.1
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
 python-dotenv==1.0.1
-Requests==2.32.3
-selenium==4.29.0
+python3-xlib==0.15
+pytweening==1.2.0
+pytz==2022.1
+pywhatkit==5.4
+pyxdg==0.27
+PyYAML==5.4.1
+redis==5.0.3
+reportlab==3.6.8
+requests==2.31.0
+requests-oauthlib==2.0.0
+requests-toolbelt==0.9.1
+rsa==4.9
+sdkmanager==0.5.1
+SecretStorage==3.3.1
+selenium==4.19.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+spotipy==2.23.0
+SQLAlchemy==2.0.35
+StrEnum==0.4.15
+systemd-python==234
+texttable==1.6.4
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.11.0
+tzdata==2024.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+uritemplate==4.1.1
+urllib3==1.26.5
+usb-creator==0.3.7
+vboxapi==1.0
+wadllib==1.3.6
+webdriver-manager==4.0.1
+websocket-client==1.2.3
+Werkzeug==3.0.4
+wikipedia==1.4.0
+wsproto==1.2.0
+xdg==5
+xkit==0.0.0
+ytmusicapi==1.6.0
+zipp==1.0.0
